manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aks01-0a63"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "aks01-0a63"
  template:
    metadata:
      labels:
        app: "aks01-0a63"
    spec:
      containers:
        - name: "aks01-0a63"
          image: "aks01reg.azurecr.io/aks01"
          ports:
          - containerPort: 80
