manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aks01-0a63"
    labels:
        app: "aks01-0a63"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aks-01bafa-aks01-0a63.0138f3d1cd964ab88eca.southeastasia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aks01-0a63"
                servicePort: 80
